bug fixed on carousel overlapping nav

--- a/assets/body.css
+++ b/assets/body.css
@@ -6,7 +6,8 @@ header {
   top: 0;
   padding: 10px 15px;
   box-shadow: 3px 0px 3px rgba(0, 0, 0, 0.363);
-  width: 100%; }
+  width: 100%;
+  z-index: 999; }
   header .hamburger-icon button {
     display: block;
     font-size: 30px;
