--- a/assets/header.scss
+++ b/assets/header.scss
@@ -8,7 +8,7 @@ header {
   padding: 10px 15px;
   box-shadow: 3px 0px 3px rgba(0, 0, 0, 0.363);
   width: 100%;
-
+  z-index: 999;
   .hamburger-icon {
     button {
       display: block;
